--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -73,7 +73,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["macos-13", "macos-15", "windows-2022"]
+        os: ["macos-15-intel", "macos-15", "windows-2022"]
         python-version: [
         #  "3.10", 
         #  "3.11", 
@@ -91,7 +91,7 @@ jobs:
             vtk-suffix: "/"
             vtk-prefix: ""
             shells: "bash"
-          - os: "macos-13"
+          - os: "macos-15-intel"
             vtk-libs: ".dylibs/libvtk*.dylib"
             vtk-suffix: "/"
             vtk-prefix: ""
@@ -269,7 +269,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["macos-13", "macos-15", "windows-2022"]
+        os: ["macos-15-intel", "macos-15", "windows-2022"]
         python-version: [
         #  "3.10", 
         #  "3.11", 
@@ -289,7 +289,7 @@ jobs:
             env: "MACOSX_DEPLOYMENT_TARGET=11.1"
             shells: "bash"
             ocp-source-tag: "macos-15"
-          - os: "macos-13"
+          - os: "macos-15-intel"
             delocate: delocate
             plat: macosx_11_1_x86_64
             module: "OCP.*.so"
@@ -332,7 +332,7 @@ jobs:
       matrix:
         os:
           [
-            "macos-13",
+            "macos-15-intel",
             "macos-15",
             "ubuntu-22.04",
             "ubuntu-22.04-arm",
@@ -350,8 +350,8 @@ jobs:
           - python-version: "3.14"
             use-vtk: "vtk"
         include:
-          - os: "macos-13"
-            runner: macos-13
+          - os: "macos-15-intel"
+            runner: macos-15-intel
           - os: "macos-15"
             runner: macos-15
           - os: "ubuntu-22.04"
