cadquery not running on ubuntu arm because nlopt not existing

--- a/.github/actions/test-ocp/action.yml
+++ b/.github/actions/test-ocp/action.yml
@@ -162,7 +162,7 @@ runs:
     # - - -
 
     - name: Run cadquery tests (${{ inputs.use-vtk }})
-      if: inputs.use-vtk == 'vtk'
+      if: inputs.use-vtk == 'vtk' && inputs.os != 'ubuntu-22.04-arm'
       shell: bash -l {0}
       run: |
         # Run cadquery tests
