--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -16,7 +16,7 @@ env:
   PYWRAP: false
   # OCP source download URL (default: https://github.com/CadQuery/OCP/releases/download)
   SOURCE_URL: https://github.com/bernhard-42/__temp_artefacts__/releases/download
-  RELEASE_TO_REPO: false
+  RELEASE_TO_REPO: true
 
 jobs:
   # ================================================================================
