--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -8,14 +8,15 @@ on: workflow_dispatch
 
 env:
   OCP: 7.9.2.0
-  WHEEL: 7.9.2.0.dev0
+  WHEEL: 7.9.2.0
   VTK: 9.5.2
   VTK_MAJOR: 9.5
   OCCT: 7.9.2
   PYBIND11: 2.13
   PYWRAP: 'false'
   # OCP source download URL (default: https://github.com/CadQuery/OCP/releases/download)
-  SOURCE_URL: https://github.com/bernhard-42/__temp_artefacts__/releases/download
+  # SOURCE_URL: https://github.com/bernhard-42/__temp_artefacts__/releases/download
+  SOURCE_URL: https://github.com/CadQuery/OCP/releases/download
   RELEASE_TO_REPO: 'true'
 
 jobs:
@@ -35,9 +36,9 @@ jobs:
       matrix:
         os: ["ubuntu-22.04", "ubuntu-22.04-arm"]
         python-version: [
-        #  "3.10", 
-        #  "3.11", 
-        #  "3.12", 
+          "3.10", 
+          "3.11", 
+          "3.12", 
           "3.13", 
           "3.14"
         ]
