--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -13,11 +13,11 @@ env:
   VTK_MAJOR: 9.5
   OCCT: 7.9.2
   PYBIND11: 2.13
-  PYWRAP: 'false'
+  PYWRAP: "false"
   # OCP source download URL (default: https://github.com/CadQuery/OCP/releases/download)
   # SOURCE_URL: https://github.com/bernhard-42/__temp_artefacts__/releases/download
   SOURCE_URL: https://github.com/CadQuery/OCP/releases/download
-  RELEASE_TO_REPO: 'true'
+  RELEASE_TO_REPO: "true"
 
 jobs:
   # ================================================================================
@@ -35,13 +35,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-22.04", "ubuntu-22.04-arm"]
-        python-version: [
-          "3.10", 
-          "3.11", 
-          "3.12", 
-          "3.13", 
-          "3.14"
-        ]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
         use-vtk: ["vtk", "novtk"]
         exclude:
           - python-version: "3.14"
@@ -75,13 +69,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ["macos-15-intel", "macos-15", "windows-2022"]
-        python-version: [
-        #  "3.10", 
-        #  "3.11", 
-        #  "3.12", 
-          "3.13", 
-          "3.14"
-        ]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
         use-vtk: ["vtk", "novtk"]
         exclude:
           - python-version: "3.14"
@@ -177,13 +165,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [
-        #  "3.10", 
-        #  "3.11", 
-        #  "3.12", 
-          "3.13", 
-          "3.14"
-        ]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
 
     steps:
       - uses: actions/checkout@v4
@@ -228,13 +210,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-22.04", "ubuntu-22.04-arm"]
-        python-version: [
-        #  "3.10", 
-        #  "3.11", 
-        #  "3.12", 
-          "3.13", 
-          "3.14"
-        ]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
         use-vtk: ["vtk", "novtk"]
         exclude:
           - python-version: "3.14"
@@ -271,13 +247,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ["macos-15-intel", "macos-15", "windows-2022"]
-        python-version: [
-        #  "3.10", 
-        #  "3.11", 
-        #  "3.12", 
-          "3.13", 
-          "3.14"
-        ]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
         use-vtk: ["vtk", "novtk"]
         exclude:
           - python-version: "3.14"
@@ -339,13 +309,7 @@ jobs:
             "ubuntu-22.04-arm",
             "windows-2022",
           ]
-        python-version: [
-        #  "3.10", 
-        #  "3.11", 
-        #  "3.12", 
-          "3.13", 
-          "3.14"
-        ]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
         use-vtk: ["vtk", "novtk"]
         exclude:
           - python-version: "3.14"
@@ -381,7 +345,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [tests]
     permissions:
-      contents: write    
+      contents: write
 
     steps:
       - uses: actions/checkout@v4
