--- a/.github/actions/build-ocp-source/action.yml
+++ b/.github/actions/build-ocp-source/action.yml
@@ -7,6 +7,9 @@ inputs:
   python-version:
     description: "Python version to use for the build"
     required: true
+  plat:
+    description: "Space-separated list of platform tags for the stubs wheel"
+    required: true
 runs:
   using: "composite"
   steps:
@@ -220,20 +223,11 @@ runs:
         cd dist
         ORIG_WHEEL=$(ls *.whl)
 
-        if [[ "${{ inputs.os }}" == macos-* ]]; then
-          # macOS: create wheels for both x86_64 and arm64
-          wheel tags --platform-tag macosx_11_1_arm64 "$ORIG_WHEEL"
-          wheel tags --platform-tag macosx_11_1_x86_64 "$ORIG_WHEEL"
-          rm "$ORIG_WHEEL"
-        elif [[ "${{ inputs.os }}" == ubuntu-* ]]; then
-          # Linux: create wheels for both x86_64 and aarch64
-          wheel tags --platform-tag manylinux_2_31_x86_64 "$ORIG_WHEEL"
-          wheel tags --platform-tag manylinux_2_31_aarch64 "$ORIG_WHEEL"
-          rm "$ORIG_WHEEL"
-        else
-          # Windows: single wheel for win_amd64
-          wheel tags --platform-tag win_amd64 --remove "$ORIG_WHEEL"
-        fi
+        # Create a wheel for each platform tag
+        for plat in ${{ inputs.plat }}; do
+          wheel tags --platform-tag "$plat" "$ORIG_WHEEL"
+        done
+        rm "$ORIG_WHEEL"
 
     - name: Upload cadquery_ocp stubs wheel
       if: env.PYWRAP == 'false'
