--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -125,6 +125,9 @@ jobs:
       matrix:
         os: ["ubuntu-22.04"]
         python-version: ["3.13"]
+        include:
+          - os: "ubuntu-22.04"
+            plat: "manylinux_2_31_x86_64 manylinux_2_31_aarch64"
 
     steps:
       - uses: actions/checkout@v4
@@ -134,6 +137,7 @@ jobs:
         with:
           os: ${{ matrix.os }}
           python-version: ${{ matrix.python-version }}
+          plat: ${{ matrix.plat }}
 
   sources-win-mac:
     name: Build OCP source on ${{ matrix.os }}
@@ -144,6 +148,11 @@ jobs:
       matrix:
         os: ["macos-15", "windows-2022"]
         python-version: ["3.13"]
+        include:
+          - os: "macos-15"
+            plat: "macosx_11_0_arm64 macosx_11_0_x86_64"
+          - os: "windows-2022"
+            plat: "win_amd64"
 
     steps:
       - uses: actions/checkout@v4
@@ -153,6 +162,7 @@ jobs:
         with:
           os: ${{ matrix.os }}
           python-version: ${{ matrix.python-version }}
+          plat: ${{ matrix.plat }}
 
   # ================================================================================
   # Build OCP proxy
@@ -255,16 +265,16 @@ jobs:
         include:
           - os: "macos-15"
             delocate: delocate
-            plat: macosx_11_1_arm64
+            plat: macosx_11_0_arm64
             module: "OCP.*.so"
-            env: "MACOSX_DEPLOYMENT_TARGET=11.1"
+            env: "MACOSX_DEPLOYMENT_TARGET=11.0"
             shells: "bash"
             ocp-source-tag: "macos-15"
           - os: "macos-15-intel"
             delocate: delocate
-            plat: macosx_11_1_x86_64
+            plat: macosx_11_0_x86_64
             module: "OCP.*.so"
-            env: "MACOSX_DEPLOYMENT_TARGET=11.1"
+            env: "MACOSX_DEPLOYMENT_TARGET=11.0"
             shells: "bash"
             ocp-source-tag: "macos-15"
           - os: "windows-2022"
