add all os and python versions again

--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -35,12 +35,11 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-22.04", "ubuntu-22.04-arm"]
-        # python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
-        python-version: ["3.13"]  # restricted for initial testing
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
         use-vtk: ["vtk", "novtk"]
-        # exclude:
-        #   - python-version: "3.14"
-        #     use-vtk: "vtk"
+        exclude:
+          - python-version: "3.14"
+            use-vtk: "vtk"
         include:
           - os: "ubuntu-22.04"
             runner: ubuntu-latest
@@ -69,25 +68,23 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # os: ["macos-15-intel", "macos-15", "windows-2022"]
-        os: ["macos-15", "windows-2022"]  # macos-15-intel temporarily removed (slow delocate)
-        # python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
-        python-version: ["3.13"]  # restricted for initial testing
+        os: ["macos-15-intel", "macos-15", "windows-2022"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
         use-vtk: ["vtk", "novtk"]
-        # exclude:
-        #   - python-version: "3.14"
-        #     use-vtk: "vtk"
+        exclude:
+          - python-version: "3.14"
+            use-vtk: "vtk"
         include:
           - os: "macos-15"
             vtk-libs: ".dylibs/libvtk*.dylib"
             vtk-suffix: "/"
             vtk-prefix: ""
             shells: "bash"
-          # - os: "macos-15-intel"
-          #   vtk-libs: ".dylibs/libvtk*.dylib"
-          #   vtk-suffix: "/"
-          #   vtk-prefix: ""
-          #   shells: "bash"
+          - os: "macos-15-intel"
+            vtk-libs: ".dylibs/libvtk*.dylib"
+            vtk-suffix: "/"
+            vtk-prefix: ""
+            shells: "bash"
           - os: "windows-2022"
             vtk-libs: "vtk*.dll"
             vtk-suffix: "/"
@@ -178,8 +175,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
-        python-version: ["3.13"]  # restricted for initial testing
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
 
     steps:
       - uses: actions/checkout@v4
@@ -224,12 +220,11 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-22.04", "ubuntu-22.04-arm"]
-        # python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
-        python-version: ["3.13"]  # restricted for initial testing
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
         use-vtk: ["vtk", "novtk"]
-        # exclude:
-        #   - python-version: "3.14"
-        #     use-vtk: "vtk"
+        exclude:
+          - python-version: "3.14"
+            use-vtk: "vtk"
         include:
           - os: "ubuntu-22.04"
             runner: ubuntu-latest
@@ -261,14 +256,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # os: ["macos-15-intel", "macos-15", "windows-2022"]
-        os: ["macos-15", "windows-2022"]  # macos-15-intel temporarily removed (slow delocate)
-        # python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
-        python-version: ["3.13"]  # restricted for initial testing
+        os: ["macos-15-intel", "macos-15", "windows-2022"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
         use-vtk: ["vtk", "novtk"]
-        # exclude:
-        #   - python-version: "3.14"
-        #     use-vtk: "vtk"
+        exclude:
+          - python-version: "3.14"
+            use-vtk: "vtk"
         include:
           - os: "macos-15"
             delocate: delocate
@@ -277,13 +270,13 @@ jobs:
             env: "MACOSX_DEPLOYMENT_TARGET=11.0"
             shells: "bash"
             ocp-source-tag: "macos-15"
-          # - os: "macos-15-intel"
-          #   delocate: delocate
-          #   plat: macosx_11_0_x86_64
-          #   module: "OCP.*.so"
-          #   env: "MACOSX_DEPLOYMENT_TARGET=11.0"
-          #   shells: "bash"
-          #   ocp-source-tag: "macos-15"
+          - os: "macos-15-intel"
+            delocate: delocate
+            plat: macosx_11_0_x86_64
+            module: "OCP.*.so"
+            env: "MACOSX_DEPLOYMENT_TARGET=11.0"
+            shells: "bash"
+            ocp-source-tag: "macos-15"
           - os: "windows-2022"
             delocate: delvewheel
             plat: win_amd64
@@ -320,21 +313,20 @@ jobs:
       matrix:
         os:
           [
-            # "macos-15-intel",  # temporarily removed (slow delocate)
+            "macos-15-intel",
             "macos-15",
             "ubuntu-22.04",
             "ubuntu-22.04-arm",
             "windows-2022",
           ]
-        # python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
-        python-version: ["3.13"]  # restricted for initial testing
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
         use-vtk: ["vtk", "novtk"]
-        # exclude:
-        #   - python-version: "3.14"
-        #     use-vtk: "vtk"
+        exclude:
+          - python-version: "3.14"
+            use-vtk: "vtk"
         include:
-          # - os: "macos-15-intel"
-          #   runner: macos-15-intel
+          - os: "macos-15-intel"
+            runner: macos-15-intel
           - os: "macos-15"
             runner: macos-15
           - os: "ubuntu-22.04"
