move to header only libfmt to also solve ubuntu x86_64

--- a/.github/actions/build-ocp/action.yml
+++ b/.github/actions/build-ocp/action.yml
@@ -207,8 +207,8 @@ runs:
             -D OpenCASCADE_DIR=$HOME/opt/local/occt-${{ env.OCCT }}-${{ inputs.use-vtk }}/lib/cmake/opencascade \
             -D pybind11_DIR=$(python -c "import pybind11; print(pybind11.get_cmake_dir())") \
             -D CMAKE_CXX_STANDARD=17 \
-            -D CMAKE_CXX_FLAGS="-isystem $CONDA_PREFIX/include -isystem $CONDA_PREFIX/include/python${{ inputs.python-version }} -D_GLIBCXX_USE_CXX11_ABI=$CXX11_ABI -fvisibility=hidden -w" \
-            -D CMAKE_MODULE_LINKER_FLAGS="-L $CONDA_PREFIX/lib -L $HOME/opt/local/vtk-${{ env.VTK }}/lib -Wl,--no-as-needed -lfmt -Wl,--as-needed" \
+            -D CMAKE_CXX_FLAGS="-isystem $CONDA_PREFIX/include -isystem $CONDA_PREFIX/include/python${{ inputs.python-version }} -D_GLIBCXX_USE_CXX11_ABI=$CXX11_ABI -DFMT_HEADER_ONLY -fvisibility=hidden -w" \
+            -D CMAKE_MODULE_LINKER_FLAGS="-L $CONDA_PREFIX/lib -L $HOME/opt/local/vtk-${{ env.VTK }}/lib" \
             -D CMAKE_BUILD_WITH_INSTALL_RPATH=TRUE
 
         if [[ "${{ inputs.use-vtk }}" == "vtk" ]]; then
@@ -236,11 +236,10 @@ runs:
         cd OCP
 
         if [[ "${{ inputs.use-vtk }}" == "vtk" ]]; then
+          export LDFLAGS="-L$HOME/opt/local/vtk-${{ env.VTK }}/lib"
           VTK_DIR="-D VTK_DIR=$HOME/opt/local/vtk-${{ env.VTK }}"
-          FMT_LINKER_FLAGS="-L $CONDA_PREFIX/lib -L $HOME/opt/local/vtk-${{ env.VTK }}/lib -lfmt"
         else
           VTK_DIR=""
-          FMT_LINKER_FLAGS="-L $CONDA_PREFIX/lib -lfmt"
         fi
 
         echo "Building OCP with VTK_DIR=$VTK_DIR"
@@ -249,8 +248,7 @@ runs:
             -D CMAKE_C_COMPILER=/usr/bin/clang -D CMAKE_CXX_COMPILER=/usr/bin/clang++ \
             -D CMAKE_BUILD_TYPE=Release \
             -D CMAKE_OSX_DEPLOYMENT_TARGET="11.1" \
-            -D CMAKE_CXX_FLAGS="-isystem $CONDA_PREFIX/include -isystem $CONDA_PREFIX/include/python${{ inputs.python-version }} -fvisibility=hidden -w" \
-            -D CMAKE_MODULE_LINKER_FLAGS="$FMT_LINKER_FLAGS" \
+            -D CMAKE_CXX_FLAGS="-isystem $CONDA_PREFIX/include -isystem $CONDA_PREFIX/include/python${{ inputs.python-version }} -DFMT_HEADER_ONLY -fvisibility=hidden -w" \
             $VTK_DIR \
             -D OpenCASCADE_DIR=$HOME/opt/local/occt-${{ env.OCCT }}-${{ inputs.use-vtk }}/lib/cmake/opencascade \
             -D pybind11_DIR=$(python -c "import pybind11; print(pybind11.get_cmake_dir())") \
@@ -302,13 +300,12 @@ runs:
 
         cmake -B build -S OCP -G Ninja ^
           -D CMAKE_BUILD_TYPE=Release ^
-          -D CMAKE_CXX_FLAGS="/DWIN32 /D_WINDOWS /GR /EHsc /utf-8 /wd4834 /wd4996 /external:I%CONDA_PREFIX%\Include /external:I%CONDA_PREFIX%\Library\include /external:I%CONDA_PREFIX%\Lib\site-packages\pybind11\include" ^
+          -D CMAKE_CXX_FLAGS="/DWIN32 /D_WINDOWS /GR /EHsc /utf-8 /DFMT_HEADER_ONLY /wd4834 /wd4996 /external:I%CONDA_PREFIX%\Include /external:I%CONDA_PREFIX%\Library\include /external:I%CONDA_PREFIX%\Lib\site-packages\pybind11\include" ^
           -D Python3_FIND_STRATEGY=LOCATION ^
           -D Python3_ROOT_DIR=%CONDA_PREFIX% ^
           %VTK_DIR% ^
           -D OpenCASCADE_DIR=%USERPROFILE%\opt\local\occt-${{ env.OCCT }}-${{ inputs.use-vtk }}\cmake ^
-          -D pybind11_DIR=%CONDA_PREFIX%\Lib\site-packages\pybind11\share\cmake\pybind11 ^
-          -D CMAKE_MODULE_LINKER_FLAGS="/LIBPATH:%CONDA_PREFIX%\Library\lib fmt.lib"
+          -D pybind11_DIR=%CONDA_PREFIX%\Lib\site-packages\pybind11\share\cmake\pybind11
 
         ninja -C build -j ${{ steps.cpu-count.outputs.cpu_count }}
 
@@ -374,7 +371,7 @@ runs:
           mv *.pyd OCP
 
         elif [[ "$RUNNER_OS" == "macOS" ]]; then
-          DYLD_LIBRARY_PATH=$HOME/opt/local/vtk-${{ env.VTK }}/lib:$HOME/opt/local/occt-${{ env.OCCT }}-${{ inputs.use-vtk }}/lib:$CONDA_PREFIX/lib \
+          DYLD_LIBRARY_PATH=$HOME/opt/local/vtk-${{ env.VTK }}/lib:$HOME/opt/local/occt-${{ env.OCCT }}-${{ inputs.use-vtk }}/lib \
           python ocp-tree.py
           mv *.so OCP
           ls -l OCP/*.so
@@ -382,7 +379,7 @@ runs:
           ls -l OCP/*.so
           
         else
-          LD_LIBRARY_PATH=$HOME/opt/local/vtk-${{ env.VTK }}/lib:$HOME/opt/local/occt-${{ env.OCCT }}-${{ inputs.use-vtk }}/lib:$CONDA_PREFIX/lib \
+          LD_LIBRARY_PATH=$HOME/opt/local/vtk-${{ env.VTK }}/lib:$HOME/opt/local/occt-${{ env.OCCT }}-${{ inputs.use-vtk }}/lib \
           python ocp-tree.py
           mv *.so OCP
           ls -l OCP/*.so
